# IITJammuProjectFinalSubmission

./: README.md  app_gradio.py  conftest.py  pyproject.toml  requirements.txt  test_memory.py  test_schemas.py
docs/: architecture.md
outputs/samples/: README.md  sample_01_kyoto.json  sample_02_lisbon_low_cost.json  sample_03_family_barcelona.json  sample_03_family_barcelona.md
src/: __init__.py  agents.py  crew.py  followup_context.py  main.py  memory.py  parallel_pipeline.py  schemas.py  tasks.py  tasks_parallel.py  utils.py
tests/: test_followup_context.py  test_utils.py
